// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render active renders empty message 1`] = `
<ThemeProvider
  theme={
    Object {
      "alert": Object {
        "error": Object {
          "background": "#e03e2f",
          "backgroundLight": "#FDF6F5",
          "border": "#E7C0BC",
          "iconColor": "#C72516",
          "textDark": "#5d3e3b",
          "textLight": "#92635f",
        },
        "info": Object {
          "background": "#4674ca",
          "backgroundLight": "#F5FAFE",
          "border": "#B5D6ED",
          "iconColor": "#4674ca",
        },
        "success": Object {
          "background": "#57be8c",
          "backgroundLight": "#F8FCF7",
          "border": "#BBD6B3",
          "iconColor": "#3EA573",
        },
        "warn": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
        "warning": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
      },
      "blue": "#4674ca",
      "blueDark": "#2D5BB1",
      "blueLight": "#608EE4",
      "borderDark": "#D1CAD8",
      "borderLight": "#E2DBE8",
      "borderLighter": "#f9f6fd",
      "borderRadius": "4px",
      "dropShadowHeavy": "0 1px 4px 1px rgba(47,40,55,0.08), 0 4px 16px 0 rgba(47,40,55,0.12)",
      "dropShadowLight": "0 2px 0 rgba(37, 11, 54, 0.04)",
      "error": "#e03e2f",
      "fontSizeLarge": "18px",
      "fontSizeMedium": "16px",
      "fontSizeSmall": "12px",
      "gray1": "#BDB4C7",
      "gray2": "#9585A3",
      "gray3": "#645574",
      "gray4": "#4A3E56",
      "gray5": "#302839",
      "green": "#57be8c",
      "greenDark": "#3EA573",
      "greenLight": "#71D8A6",
      "greenTransparent": "rgba(87, 190, 140, 0.5)",
      "grid": 8,
      "offWhite": "#FAF9FB",
      "orange": "#ec5e44",
      "orangeDark": "#D3452B",
      "orangeLight": "#FF785E",
      "pink": "#F868BC",
      "pinkDark": "#DF4FA3",
      "pinkLight": "#FF82D6",
      "purple": "#6C5FC7",
      "purple2": "#6f617c",
      "purpleDark": "#5346AE",
      "purpleDarkest": "#392C94",
      "purpleLight": "#8679E1",
      "purplelightest": "#9F92FA",
      "red": "#e03e2f",
      "redDark": "#C72516",
      "redLight": "#FA5849",
      "settings": Object {
        "containerWidth": "1140px",
        "headerHeight": "115px",
        "sidebarWidth": "210px",
      },
      "success": "#57be8c",
      "text": Object {
        "family": "\\"Rubik\\", \\"Avenir Next\\", sans-serif",
        "familyMono": "Monaco, Consolas, \\"Courier New\\", monospace",
        "lineHeightBody": "1.4",
        "lineHeightHeading": "1.15",
      },
      "textColor": "#302839",
      "whiteDark": "#fbfbfc",
      "yellow": "#ecc844",
      "yellowDark": "#e6bc23",
      "yellowLight": "#FFF15E",
      "yellowLightest": "#FFFDF7",
      "yellowOrange": "#f9a66d",
      "yellowOrangeDark": "#E08D54",
      "yellowOrangeLight": "#FFC087",
      "zIndex": Object {
        "dropdown": 1001,
        "header": 1000,
        "modal": 10000,
        "sidebar": 100,
        "toast": 10001,
      },
    }
  }
>
  <ProjectEnvironments
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
    route={
      Object {
        "path": "environments/",
      }
    }
    routes={Array []}
  >
    <div>
      <SettingsPageHeading
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
        title="Manage Environments"
      >
        <Wrapper
          tabs={
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                Environments
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                Hidden
              </ListLink>
            </ul>
          }
        >
          <div
            className="css-t5gfr9-Wrapper css-17jmgia0"
          >
            <Flex
              align="center"
            >
              <Base
                align="center"
                className="css-5ipae5"
              >
                <div
                  className="css-5ipae5"
                  is={null}
                >
                  <Title>
                    <div
                      className="css-zmdcxu-Title css-17jmgia1"
                    >
                      Manage Environments
                    </div>
                  </Title>
                </div>
              </Base>
            </Flex>
            <div>
              <ul
                className="nav nav-tabs"
                style={
                  Object {
                    "borderBottom": "1px solid #ddd",
                  }
                }
              >
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/"
                >
                  <li
                    className="active"
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Environments
                      </a>
                    </Link>
                  </li>
                </ListLink>
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/hidden/"
                >
                  <li
                    className=""
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Hidden
                      </a>
                    </Link>
                  </li>
                </ListLink>
              </ul>
            </div>
          </div>
        </Wrapper>
      </SettingsPageHeading>
      <Panel>
        <StyledPanel>
          <div
            className="css-17bqt4b-StyledPanel css-5bw71w0"
          >
            <PanelHeader>
              <StyledPanelHeader>
                <Component
                  className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                >
                  <Flex
                    align="center"
                    className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="css-zott9u0 css-1at3g5b"
                      justify="space-between"
                    >
                      <div
                        className="css-zott9u0 css-1at3g5b"
                        is={null}
                      >
                        Active Environments
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </StyledPanelHeader>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <div
                className=""
              >
                <EmptyMessage>
                  <Wrapper>
                    <div
                      className="css-bq6a85-Wrapper css-toum0v0"
                    >
                      <div
                        className="ref-message"
                      >
                        You don't have any environments yet.
                      </div>
                    </div>
                  </Wrapper>
                </EmptyMessage>
              </div>
            </PanelBody>
          </div>
        </StyledPanel>
      </Panel>
    </div>
  </ProjectEnvironments>
</ThemeProvider>
`;

exports[`ProjectEnvironments render active renders environment list 1`] = `
<ThemeProvider
  theme={
    Object {
      "alert": Object {
        "error": Object {
          "background": "#e03e2f",
          "backgroundLight": "#FDF6F5",
          "border": "#E7C0BC",
          "iconColor": "#C72516",
          "textDark": "#5d3e3b",
          "textLight": "#92635f",
        },
        "info": Object {
          "background": "#4674ca",
          "backgroundLight": "#F5FAFE",
          "border": "#B5D6ED",
          "iconColor": "#4674ca",
        },
        "success": Object {
          "background": "#57be8c",
          "backgroundLight": "#F8FCF7",
          "border": "#BBD6B3",
          "iconColor": "#3EA573",
        },
        "warn": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
        "warning": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
      },
      "blue": "#4674ca",
      "blueDark": "#2D5BB1",
      "blueLight": "#608EE4",
      "borderDark": "#D1CAD8",
      "borderLight": "#E2DBE8",
      "borderLighter": "#f9f6fd",
      "borderRadius": "4px",
      "dropShadowHeavy": "0 1px 4px 1px rgba(47,40,55,0.08), 0 4px 16px 0 rgba(47,40,55,0.12)",
      "dropShadowLight": "0 2px 0 rgba(37, 11, 54, 0.04)",
      "error": "#e03e2f",
      "fontSizeLarge": "18px",
      "fontSizeMedium": "16px",
      "fontSizeSmall": "12px",
      "gray1": "#BDB4C7",
      "gray2": "#9585A3",
      "gray3": "#645574",
      "gray4": "#4A3E56",
      "gray5": "#302839",
      "green": "#57be8c",
      "greenDark": "#3EA573",
      "greenLight": "#71D8A6",
      "greenTransparent": "rgba(87, 190, 140, 0.5)",
      "grid": 8,
      "offWhite": "#FAF9FB",
      "orange": "#ec5e44",
      "orangeDark": "#D3452B",
      "orangeLight": "#FF785E",
      "pink": "#F868BC",
      "pinkDark": "#DF4FA3",
      "pinkLight": "#FF82D6",
      "purple": "#6C5FC7",
      "purple2": "#6f617c",
      "purpleDark": "#5346AE",
      "purpleDarkest": "#392C94",
      "purpleLight": "#8679E1",
      "purplelightest": "#9F92FA",
      "red": "#e03e2f",
      "redDark": "#C72516",
      "redLight": "#FA5849",
      "settings": Object {
        "containerWidth": "1140px",
        "headerHeight": "115px",
        "sidebarWidth": "210px",
      },
      "success": "#57be8c",
      "text": Object {
        "family": "\\"Rubik\\", \\"Avenir Next\\", sans-serif",
        "familyMono": "Monaco, Consolas, \\"Courier New\\", monospace",
        "lineHeightBody": "1.4",
        "lineHeightHeading": "1.15",
      },
      "textColor": "#302839",
      "whiteDark": "#fbfbfc",
      "yellow": "#ecc844",
      "yellowDark": "#e6bc23",
      "yellowLight": "#FFF15E",
      "yellowLightest": "#FFFDF7",
      "yellowOrange": "#f9a66d",
      "yellowOrangeDark": "#E08D54",
      "yellowOrangeLight": "#FFC087",
      "zIndex": Object {
        "dropdown": 1001,
        "header": 1000,
        "modal": 10000,
        "sidebar": 100,
        "toast": 10001,
      },
    }
  }
>
  <ProjectEnvironments
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
    route={
      Object {
        "path": "environments/",
      }
    }
    routes={Array []}
  >
    <div>
      <SettingsPageHeading
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
        title="Manage Environments"
      >
        <Wrapper
          tabs={
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                Environments
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                Hidden
              </ListLink>
            </ul>
          }
        >
          <div
            className="css-t5gfr9-Wrapper css-17jmgia0"
          >
            <Flex
              align="center"
            >
              <Base
                align="center"
                className="css-5ipae5"
              >
                <div
                  className="css-5ipae5"
                  is={null}
                >
                  <Title>
                    <div
                      className="css-zmdcxu-Title css-17jmgia1"
                    >
                      Manage Environments
                    </div>
                  </Title>
                </div>
              </Base>
            </Flex>
            <div>
              <ul
                className="nav nav-tabs"
                style={
                  Object {
                    "borderBottom": "1px solid #ddd",
                  }
                }
              >
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/"
                >
                  <li
                    className="active"
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Environments
                      </a>
                    </Link>
                  </li>
                </ListLink>
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/hidden/"
                >
                  <li
                    className=""
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Hidden
                      </a>
                    </Link>
                  </li>
                </ListLink>
              </ul>
            </div>
          </div>
        </Wrapper>
      </SettingsPageHeading>
      <Panel>
        <StyledPanel>
          <div
            className="css-17bqt4b-StyledPanel css-5bw71w0"
          >
            <PanelHeader>
              <StyledPanelHeader>
                <Component
                  className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                >
                  <Flex
                    align="center"
                    className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="css-zott9u0 css-1at3g5b"
                      justify="space-between"
                    >
                      <div
                        className="css-zott9u0 css-1at3g5b"
                        is={null}
                      >
                        Active Environments
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </StyledPanelHeader>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <div
                className=""
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  key="1"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-qcergp-StyledPanelItem css-q9h14u0"
                      justify="space-between"
                      p={2}
                    >
                      <div
                        className="css-qcergp-StyledPanelItem css-q9h14u0"
                        is={null}
                      >
                        <Flex
                          align="center"
                        >
                          <Base
                            align="center"
                            className="css-5ipae5"
                          >
                            <div
                              className="css-5ipae5"
                              is={null}
                            >
                              Production
                               
                              <code>
                                production
                              </code>
                              <Tag
                                priority="success"
                              >
                                <TagTextStyled
                                  priority="success"
                                >
                                  <span
                                    className="css-giy4xh-TagTextStyled css-3x95g0"
                                  >
                                    Default
                                  </span>
                                </TagTextStyled>
                              </Tag>
                            </div>
                          </Base>
                        </Flex>
                        <div>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton css-8di8zd0"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <button
                                className="css-10adnmx-EnvironmentButton css-8di8zd0 button button-default button-xs"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                              >
                                <Flex
                                  align="center"
                                  className="button-label"
                                >
                                  <Base
                                    align="center"
                                    className="button-label css-5ipae5"
                                  >
                                    <div
                                      className="button-label css-5ipae5"
                                      is={null}
                                    >
                                      Hide
                                    </div>
                                  </Base>
                                </Flex>
                              </button>
                            </Button>
                          </EnvironmentButton>
                        </div>
                      </div>
                    </Base>
                  </StyledPanelItem>
                </PanelItem>
                <PanelItem
                  align="center"
                  justify="space-between"
                  key="2"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-qcergp-StyledPanelItem css-q9h14u0"
                      justify="space-between"
                      p={2}
                    >
                      <div
                        className="css-qcergp-StyledPanelItem css-q9h14u0"
                        is={null}
                      >
                        <Flex
                          align="center"
                        >
                          <Base
                            align="center"
                            className="css-5ipae5"
                          >
                            <div
                              className="css-5ipae5"
                              is={null}
                            >
                              Staging
                               
                              <code>
                                staging
                              </code>
                            </div>
                          </Base>
                        </Flex>
                        <div>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton css-8di8zd0"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <button
                                className="css-10adnmx-EnvironmentButton css-8di8zd0 button button-default button-xs"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                              >
                                <Flex
                                  align="center"
                                  className="button-label"
                                >
                                  <Base
                                    align="center"
                                    className="button-label css-5ipae5"
                                  >
                                    <div
                                      className="button-label css-5ipae5"
                                      is={null}
                                    >
                                      Set as default
                                    </div>
                                  </Base>
                                </Flex>
                              </button>
                            </Button>
                          </EnvironmentButton>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton css-8di8zd0"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <button
                                className="css-10adnmx-EnvironmentButton css-8di8zd0 button button-default button-xs"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                              >
                                <Flex
                                  align="center"
                                  className="button-label"
                                >
                                  <Base
                                    align="center"
                                    className="button-label css-5ipae5"
                                  >
                                    <div
                                      className="button-label css-5ipae5"
                                      is={null}
                                    >
                                      Hide
                                    </div>
                                  </Base>
                                </Flex>
                              </button>
                            </Button>
                          </EnvironmentButton>
                        </div>
                      </div>
                    </Base>
                  </StyledPanelItem>
                </PanelItem>
              </div>
            </PanelBody>
          </div>
        </StyledPanel>
      </Panel>
    </div>
  </ProjectEnvironments>
</ThemeProvider>
`;

exports[`ProjectEnvironments render hidden renders empty message 1`] = `
<ThemeProvider
  theme={
    Object {
      "alert": Object {
        "error": Object {
          "background": "#e03e2f",
          "backgroundLight": "#FDF6F5",
          "border": "#E7C0BC",
          "iconColor": "#C72516",
          "textDark": "#5d3e3b",
          "textLight": "#92635f",
        },
        "info": Object {
          "background": "#4674ca",
          "backgroundLight": "#F5FAFE",
          "border": "#B5D6ED",
          "iconColor": "#4674ca",
        },
        "success": Object {
          "background": "#57be8c",
          "backgroundLight": "#F8FCF7",
          "border": "#BBD6B3",
          "iconColor": "#3EA573",
        },
        "warn": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
        "warning": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
      },
      "blue": "#4674ca",
      "blueDark": "#2D5BB1",
      "blueLight": "#608EE4",
      "borderDark": "#D1CAD8",
      "borderLight": "#E2DBE8",
      "borderLighter": "#f9f6fd",
      "borderRadius": "4px",
      "dropShadowHeavy": "0 1px 4px 1px rgba(47,40,55,0.08), 0 4px 16px 0 rgba(47,40,55,0.12)",
      "dropShadowLight": "0 2px 0 rgba(37, 11, 54, 0.04)",
      "error": "#e03e2f",
      "fontSizeLarge": "18px",
      "fontSizeMedium": "16px",
      "fontSizeSmall": "12px",
      "gray1": "#BDB4C7",
      "gray2": "#9585A3",
      "gray3": "#645574",
      "gray4": "#4A3E56",
      "gray5": "#302839",
      "green": "#57be8c",
      "greenDark": "#3EA573",
      "greenLight": "#71D8A6",
      "greenTransparent": "rgba(87, 190, 140, 0.5)",
      "grid": 8,
      "offWhite": "#FAF9FB",
      "orange": "#ec5e44",
      "orangeDark": "#D3452B",
      "orangeLight": "#FF785E",
      "pink": "#F868BC",
      "pinkDark": "#DF4FA3",
      "pinkLight": "#FF82D6",
      "purple": "#6C5FC7",
      "purple2": "#6f617c",
      "purpleDark": "#5346AE",
      "purpleDarkest": "#392C94",
      "purpleLight": "#8679E1",
      "purplelightest": "#9F92FA",
      "red": "#e03e2f",
      "redDark": "#C72516",
      "redLight": "#FA5849",
      "settings": Object {
        "containerWidth": "1140px",
        "headerHeight": "115px",
        "sidebarWidth": "210px",
      },
      "success": "#57be8c",
      "text": Object {
        "family": "\\"Rubik\\", \\"Avenir Next\\", sans-serif",
        "familyMono": "Monaco, Consolas, \\"Courier New\\", monospace",
        "lineHeightBody": "1.4",
        "lineHeightHeading": "1.15",
      },
      "textColor": "#302839",
      "whiteDark": "#fbfbfc",
      "yellow": "#ecc844",
      "yellowDark": "#e6bc23",
      "yellowLight": "#FFF15E",
      "yellowLightest": "#FFFDF7",
      "yellowOrange": "#f9a66d",
      "yellowOrangeDark": "#E08D54",
      "yellowOrangeLight": "#FFC087",
      "zIndex": Object {
        "dropdown": 1001,
        "header": 1000,
        "modal": 10000,
        "sidebar": 100,
        "toast": 10001,
      },
    }
  }
>
  <ProjectEnvironments
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
    route={
      Object {
        "path": "environments/hidden/",
      }
    }
    routes={Array []}
  >
    <div>
      <SettingsPageHeading
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
        title="Manage Environments"
      >
        <Wrapper
          tabs={
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                Environments
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                Hidden
              </ListLink>
            </ul>
          }
        >
          <div
            className="css-t5gfr9-Wrapper css-17jmgia0"
          >
            <Flex
              align="center"
            >
              <Base
                align="center"
                className="css-5ipae5"
              >
                <div
                  className="css-5ipae5"
                  is={null}
                >
                  <Title>
                    <div
                      className="css-zmdcxu-Title css-17jmgia1"
                    >
                      Manage Environments
                    </div>
                  </Title>
                </div>
              </Base>
            </Flex>
            <div>
              <ul
                className="nav nav-tabs"
                style={
                  Object {
                    "borderBottom": "1px solid #ddd",
                  }
                }
              >
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/"
                >
                  <li
                    className=""
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Environments
                      </a>
                    </Link>
                  </li>
                </ListLink>
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/hidden/"
                >
                  <li
                    className="active"
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Hidden
                      </a>
                    </Link>
                  </li>
                </ListLink>
              </ul>
            </div>
          </div>
        </Wrapper>
      </SettingsPageHeading>
      <Panel>
        <StyledPanel>
          <div
            className="css-17bqt4b-StyledPanel css-5bw71w0"
          >
            <PanelHeader>
              <StyledPanelHeader>
                <Component
                  className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                >
                  <Flex
                    align="center"
                    className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="css-zott9u0 css-1at3g5b"
                      justify="space-between"
                    >
                      <div
                        className="css-zott9u0 css-1at3g5b"
                        is={null}
                      >
                        Hidden
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </StyledPanelHeader>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <div
                className=""
              >
                <EmptyMessage>
                  <Wrapper>
                    <div
                      className="css-bq6a85-Wrapper css-toum0v0"
                    >
                      <div
                        className="ref-message"
                      >
                        You don't have any hidden environments.
                      </div>
                    </div>
                  </Wrapper>
                </EmptyMessage>
              </div>
            </PanelBody>
          </div>
        </StyledPanel>
      </Panel>
    </div>
  </ProjectEnvironments>
</ThemeProvider>
`;

exports[`ProjectEnvironments render hidden renders environment list 1`] = `
<ThemeProvider
  theme={
    Object {
      "alert": Object {
        "error": Object {
          "background": "#e03e2f",
          "backgroundLight": "#FDF6F5",
          "border": "#E7C0BC",
          "iconColor": "#C72516",
          "textDark": "#5d3e3b",
          "textLight": "#92635f",
        },
        "info": Object {
          "background": "#4674ca",
          "backgroundLight": "#F5FAFE",
          "border": "#B5D6ED",
          "iconColor": "#4674ca",
        },
        "success": Object {
          "background": "#57be8c",
          "backgroundLight": "#F8FCF7",
          "border": "#BBD6B3",
          "iconColor": "#3EA573",
        },
        "warn": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
        "warning": Object {
          "background": "#ecc844",
          "backgroundLight": "#FFFDF7",
          "border": "#E1D697",
          "iconColor": "#e6bc23",
          "textDark": "#D3BE2B",
        },
      },
      "blue": "#4674ca",
      "blueDark": "#2D5BB1",
      "blueLight": "#608EE4",
      "borderDark": "#D1CAD8",
      "borderLight": "#E2DBE8",
      "borderLighter": "#f9f6fd",
      "borderRadius": "4px",
      "dropShadowHeavy": "0 1px 4px 1px rgba(47,40,55,0.08), 0 4px 16px 0 rgba(47,40,55,0.12)",
      "dropShadowLight": "0 2px 0 rgba(37, 11, 54, 0.04)",
      "error": "#e03e2f",
      "fontSizeLarge": "18px",
      "fontSizeMedium": "16px",
      "fontSizeSmall": "12px",
      "gray1": "#BDB4C7",
      "gray2": "#9585A3",
      "gray3": "#645574",
      "gray4": "#4A3E56",
      "gray5": "#302839",
      "green": "#57be8c",
      "greenDark": "#3EA573",
      "greenLight": "#71D8A6",
      "greenTransparent": "rgba(87, 190, 140, 0.5)",
      "grid": 8,
      "offWhite": "#FAF9FB",
      "orange": "#ec5e44",
      "orangeDark": "#D3452B",
      "orangeLight": "#FF785E",
      "pink": "#F868BC",
      "pinkDark": "#DF4FA3",
      "pinkLight": "#FF82D6",
      "purple": "#6C5FC7",
      "purple2": "#6f617c",
      "purpleDark": "#5346AE",
      "purpleDarkest": "#392C94",
      "purpleLight": "#8679E1",
      "purplelightest": "#9F92FA",
      "red": "#e03e2f",
      "redDark": "#C72516",
      "redLight": "#FA5849",
      "settings": Object {
        "containerWidth": "1140px",
        "headerHeight": "115px",
        "sidebarWidth": "210px",
      },
      "success": "#57be8c",
      "text": Object {
        "family": "\\"Rubik\\", \\"Avenir Next\\", sans-serif",
        "familyMono": "Monaco, Consolas, \\"Courier New\\", monospace",
        "lineHeightBody": "1.4",
        "lineHeightHeading": "1.15",
      },
      "textColor": "#302839",
      "whiteDark": "#fbfbfc",
      "yellow": "#ecc844",
      "yellowDark": "#e6bc23",
      "yellowLight": "#FFF15E",
      "yellowLightest": "#FFFDF7",
      "yellowOrange": "#f9a66d",
      "yellowOrangeDark": "#E08D54",
      "yellowOrangeLight": "#FFC087",
      "zIndex": Object {
        "dropdown": 1001,
        "header": 1000,
        "modal": 10000,
        "sidebar": 100,
        "toast": 10001,
      },
    }
  }
>
  <ProjectEnvironments
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
    route={
      Object {
        "path": "environments/hidden/",
      }
    }
    routes={Array []}
  >
    <div>
      <SettingsPageHeading
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
        title="Manage Environments"
      >
        <Wrapper
          tabs={
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                Environments
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                Hidden
              </ListLink>
            </ul>
          }
        >
          <div
            className="css-t5gfr9-Wrapper css-17jmgia0"
          >
            <Flex
              align="center"
            >
              <Base
                align="center"
                className="css-5ipae5"
              >
                <div
                  className="css-5ipae5"
                  is={null}
                >
                  <Title>
                    <div
                      className="css-zmdcxu-Title css-17jmgia1"
                    >
                      Manage Environments
                    </div>
                  </Title>
                </div>
              </Base>
            </Flex>
            <div>
              <ul
                className="nav nav-tabs"
                style={
                  Object {
                    "borderBottom": "1px solid #ddd",
                  }
                }
              >
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/"
                >
                  <li
                    className=""
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Environments
                      </a>
                    </Link>
                  </li>
                </ListLink>
                <ListLink
                  activeClassName="active"
                  index={true}
                  isActive={[Function]}
                  to="/org-slug/project-slug/settings/environments/hidden/"
                >
                  <li
                    className="active"
                  >
                    <Link
                      onlyActiveOnIndex={true}
                      style={Object {}}
                      to="/org-slug/project-slug/settings/environments/hidden/"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Hidden
                      </a>
                    </Link>
                  </li>
                </ListLink>
              </ul>
            </div>
          </div>
        </Wrapper>
      </SettingsPageHeading>
      <Panel>
        <StyledPanel>
          <div
            className="css-17bqt4b-StyledPanel css-5bw71w0"
          >
            <PanelHeader>
              <StyledPanelHeader>
                <Component
                  className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                >
                  <Flex
                    align="center"
                    className="css-1ak3f0u-StyledPanelHeader css-zott9u0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="css-zott9u0 css-1at3g5b"
                      justify="space-between"
                    >
                      <div
                        className="css-zott9u0 css-1at3g5b"
                        is={null}
                      >
                        Hidden
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </StyledPanelHeader>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <div
                className=""
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  key="1"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-qcergp-StyledPanelItem css-q9h14u0"
                      justify="space-between"
                      p={2}
                    >
                      <div
                        className="css-qcergp-StyledPanelItem css-q9h14u0"
                        is={null}
                      >
                        <Flex
                          align="center"
                        >
                          <Base
                            align="center"
                            className="css-5ipae5"
                          >
                            <div
                              className="css-5ipae5"
                              is={null}
                            >
                              Zzz
                               
                              <code>
                                zzz
                              </code>
                            </div>
                          </Base>
                        </Flex>
                        <div>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton css-8di8zd0"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <button
                                className="css-10adnmx-EnvironmentButton css-8di8zd0 button button-default button-xs"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                              >
                                <Flex
                                  align="center"
                                  className="button-label"
                                >
                                  <Base
                                    align="center"
                                    className="button-label css-5ipae5"
                                  >
                                    <div
                                      className="button-label css-5ipae5"
                                      is={null}
                                    >
                                      Show
                                    </div>
                                  </Base>
                                </Flex>
                              </button>
                            </Button>
                          </EnvironmentButton>
                        </div>
                      </div>
                    </Base>
                  </StyledPanelItem>
                </PanelItem>
              </div>
            </PanelBody>
          </div>
        </StyledPanel>
      </Panel>
    </div>
  </ProjectEnvironments>
</ThemeProvider>
`;
